<resources>
    <string name="app_name">健康小秘</string>
    <string name="title_home">首页</string>
    <string name="title_qa">求医问药</string>
    <string name="title_analysis">病理分析</string>
    <string name="title_moments">七嘴八舌</string>
    <string name="title_hospital">附近诊所</string>
    <string name="title_add_analysis">分析病理</string>
    <string name="tab_qa_common">常见病</string>
    <string name="tab_qa_sex">两性天地</string>
    <string name="tab_qa_incurable">疑难杂症</string>
    <string name="tab_analysis_common">常见病</string>
    <string name="tab_analysis_infectious">传染病</string>
    <string name="tab_analysis_incurable">疑难杂症</string>
    <string name="tab_moments_treatment">求医经历</string>
    <string name="tab_moments_sex">两性趣谈</string>
    <string name="tab_moments_child">小儿难养</string>

    <string name="login_weibo">微博</string>
    <string name="login_qq">QQ</string>
    <string name="login">登录</string>
    <string name="account_hint">手机号</string>
    <string name="pwd_hint">密码</string>
    <string name="ok">确定</string>
    <string name="get_phone_code">获取验证码</string>
    <string name="count_down_left">#秒后重发</string>
    <string name="register_phone_code_hint">短信验证码</string>
    <string name="cancel">取消</string>
    <string name="register">注册</string>
    <string name="login_three_part_hint">无需注册即可登录</string>
    <string name="login_other_way">其他登录方式</string>
    <string name="login_by_message_code">手机验证码登录</string>
    <string name="login_wechat">微信</string>
    <string name="login_account_hint">手机号</string>
    <string name="login_account_error">请输入正确的手机号</string>
    <string name="login_pwd_hint">密码</string>
    <string name="login_pwd_error">账号或密码错误</string>
    <string name="login_pwd_on">abc</string>
    <string name="login_pwd_off">...</string>
    <string name="home_fab_sheet_dt">写动态</string>
    <string name="home_fab_sheet_bl">发布病理分析</string>
    <string name="home_fab_sheet_yy">求医问药</string>
    <string name="home_fab_sheet_wbl">记录我的病历</string>
    <string name="load_more">加载更多</string>
    <string name="load_finish">加载完毕</string>
    <string name="load_no_data">没有数据</string>
    <string name="loading">努力加载中...</string>
    <string name="load_fail">加载失败，请点击屏幕重试</string>
    <string name="load_fail_toast">加载失败</string>
    <string name="network_not_connect">网络连接失败</string>


</resources>
