<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/account_hint">

        <EditText
            android:id="@+id/ev_account"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/selector_bg_edit"
            android:inputType="phone"
            android:paddingBottom="5dp"
            android:paddingTop="10dp"
            android:singleLine="true"
            android:textColor="@color/text_primary"
            android:textCursorDrawable="@drawable/bg_input_cursor"
            android:textSize="@dimen/text_size_content" />
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="bottom"
        android:orientation="horizontal">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_code"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/register_phone_code_hint">

            <EditText
                android:id="@+id/ev_code"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/selector_bg_edit"
                android:inputType="phone"
                android:paddingBottom="5dp"
                android:paddingTop="10dp"
                android:singleLine="true"
                android:textColor="@color/text_primary"
                android:textCursorDrawable="@drawable/bg_input_cursor"
                android:textSize="@dimen/text_size_content" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btn_code"
            android:layout_width="70dp"
            android:layout_height="35dp"
            android:layout_alignParentRight="true"
            android:background="@drawable/selector_btn_dialog_opt"
            android:text="@string/get_phone_code"
            android:textColor="@color/red_f51d67"
            android:textSize="@dimen/text_size_content_small" />

    </LinearLayout>
</LinearLayout>
